syntax = "proto3";

package common;

import "google/protobuf/timestamp.proto";

message Timestamps {
    google.protobuf.Timestamp created_at = 1;
    google.protobuf.Timestamp updated_at = 2;
    google.protobuf.Timestamp deleted_at = 3;
}